# juris-ai-helper

./: CLAUDE.md
.github/workflows/: main.yaml
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: cli.py  config.py  logging_config.py  main.py
backend/app/api/: routes.py
backend/app/schemas/: models.py
backend/app/services/: csv_service.py  ollama_service.py  pdf_service.py
backend/scripts/: test_process.py
docker/: .gitignore  docker-compose.yaml
frontend/: .env.example  README.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/models/: route.ts
frontend/src/app/api/preview/: route.ts
frontend/src/app/api/preview-subjects/: route.ts
frontend/src/app/api/process/: route.ts
frontend/src/app/api/process-stream/: route.ts
frontend/src/components/: file-upload.tsx
frontend/src/components/ui/: progress.tsx
gitops/: .gitignore  .pre-commit-config.yaml
gitops/juris-ai-helper/: Chart.yaml  values.yaml
gitops/juris-ai-helper/templates/: _helpers.tpl  backend.yaml  config-map.yaml  configmap.yaml  frontend.yaml
